# KrilovaDiploma

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  setup.cfg
apps/: conftest.py
apps/access_control/: apps.py  factories.py  forms.py  models.py  urls.py  views.py
apps/access_control/migrations/: 0001_initial.py  0002_alter_accesscontrol_comment_and_more.py  0003_alter_accesscontrol_soi_id.py  0004_alter_accesscontrol_device_display_name.py
apps/access_control/resources/: __init__.py  format.py  resources.py
apps/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
apps/users/: admin.py  factories.py  models.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_middle_name_delete_staffuser.py
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py
config/settings/common/: __init__.py  authentication.py  dev_tools.py  drf.py  general.py  installed_apps.py  internationalization.py  logging.py  middleware.py  paths.py  static.py  swagger.py  templates.py
static/js/: filterByStatus.js
static/js/modal/: confirmDelete.js
templates/: base.html
templates/modal/: confirm_delete.html
templates/pages/: access_control_list.html  import_access_control.html
